{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 548,
  "lineage": "ffb80fc9-1614-d8c8-c005-88947d704936",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:722929565755:internet-gateway/igw-07b89df7237773b2e",
            "id": "igw-07b89df7237773b2e",
            "owner_id": "722929565755",
            "tags": {
              "CreatedBy": "Tanveer"
            },
            "tags_all": {
              "CreatedBy": "Tanveer"
            },
            "vpc_id": "vpc-0510f593c9b208d3e"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:loadbalancer/app/clearpoint-lb-web/0f024edfcd036908",
            "arn_suffix": "app/clearpoint-lb-web/0f024edfcd036908",
            "desync_mitigation_mode": "defensive",
            "dns_name": "clearpoint-lb-web-2018227430.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:loadbalancer/app/clearpoint-lb-web/0f024edfcd036908",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clearpoint-lb-web",
            "security_groups": [
              "sg-031dd382a2ebe040e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0851b3aef0515338f"
              },
              {
                "subnet_id": "subnet-0f15dd21fffe3bc53"
              }
            ],
            "subnets": [
              "subnet-0851b3aef0515338f",
              "subnet-0f15dd21fffe3bc53"
            ],
            "vpc_id": "vpc-0510f593c9b208d3e",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.public_security_group_ECS",
            "aws_subnet.prod-subnet-public-1",
            "aws_subnet.prod-subnet-public-2",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:listener/app/clearpoint-lb-web/0f024edfcd036908/a1844c64f6c3836a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:targetgroup/example-target-group/ba78c9786d7184f9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:listener/app/clearpoint-lb-web/0f024edfcd036908/a1844c64f6c3836a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:loadbalancer/app/clearpoint-lb-web/0f024edfcd036908",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.hello_world",
            "aws_security_group.public_security_group_ECS",
            "aws_subnet.prod-subnet-public-1",
            "aws_subnet.prod-subnet-public-2",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hello_world",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:targetgroup/example-target-group/ba78c9786d7184f9",
            "arn_suffix": "targetgroup/example-target-group/ba78c9786d7184f9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:722929565755:targetgroup/example-target-group/ba78c9786d7184f9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0510f593c9b208d3e"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eebdcab64a6e41f6",
            "original_route_table_id": "rtb-04edfe6fd4aa4e1a8",
            "route_table_id": "rtb-098e8ae718c93c7d5",
            "vpc_id": "vpc-0510f593c9b208d3e"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.public_rt",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:722929565755:route-table/rtb-098e8ae718c93c7d5",
            "id": "rtb-098e8ae718c93c7d5",
            "owner_id": "722929565755",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b89df7237773b2e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0510f593c9b208d3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017591e6ed2d7c629",
            "route_table_id": "rtb-098e8ae718c93c7d5",
            "subnet_id": "subnet-0f15dd21fffe3bc53"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.public_rt",
            "aws_subnet.prod-subnet-public-1",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d47c30693288683",
            "route_table_id": "rtb-098e8ae718c93c7d5",
            "subnet_id": "subnet-0851b3aef0515338f"
          },
          "dependencies": [
            "aws_internet_gateway.prod-igw",
            "aws_route_table.public_rt",
            "aws_subnet.prod-subnet-public-2",
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group_ECS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:722929565755:security-group/sg-031dd382a2ebe040e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031dd382a2ebe040e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "139.180.108.110/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "722929565755",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0510f593c9b208d3e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:722929565755:subnet/subnet-0f15dd21fffe3bc53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.80.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f15dd21fffe3bc53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722929565755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Tanveer"
            },
            "tags_all": {
              "CreatedBy": "Tanveer"
            },
            "vpc_id": "vpc-0510f593c9b208d3e"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod-subnet-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:722929565755:subnet/subnet-0851b3aef0515338f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.80.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0851b3aef0515338f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "722929565755",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "CreatedBy": "Tanveer"
            },
            "tags_all": {
              "CreatedBy": "Tanveer"
            },
            "vpc_id": "vpc-0510f593c9b208d3e"
          },
          "dependencies": [
            "aws_vpc.vpc-main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:722929565755:vpc/vpc-0510f593c9b208d3e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.80.0.0/16",
            "default_network_acl_id": "acl-0fc71a2fb2a1c65d3",
            "default_route_table_id": "rtb-098e8ae718c93c7d5",
            "default_security_group_id": "sg-042002bf556c6947e",
            "dhcp_options_id": "dopt-01fff440ca70a39e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0510f593c9b208d3e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-098e8ae718c93c7d5",
            "owner_id": "722929565755"
          }
        }
      ]
    }
  ]
}